updated the css and added box shadow

--- a/resources.css
+++ b/resources.css
@@ -3,24 +3,42 @@
     --secondary-color: #F46188;
   --third-color: #642AB6;
   --forth-color: #491D7F;
+  --box-shadow:5px 5px 20px 5px rgba(0,0,0,0.33);
 }
 
 body {
     background-color: var(--primary-color)!important;
 }
-
+.navbar-nav{
+    display: flex;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 20px;
+    color: #ffff;
+}
 h1{
     background: var(--secondary-color);
     padding: 40px;
     color: var(--forth-color);
+    font-family: 'Bebas Neue', cursive;
+    font-size: 70px !important;
 }
 div .card{
     display: flex;
-    justify-content: space-evenly;
     background: var(--secondary-color);
     border-radius: 15px;
     flex:1;
     padding: 10px;
+    box-shadow: var(--box-shadow);
+}
+.col-sm-4 {
+    justify-content: space-evenly;
+    padding-bottom: 10px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    color:black;
+}
+.card-text{
+    justify-content: center;
 }
 img{
     margin-top: 10px;
